; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Tree.c_Tree_Val.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Tree.c_Tree_Val.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Tree = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.Tree*, i8*)* @Tree_Val to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @Tree_Val(%struct.Tree* %0, i8* %1) #0 {
  %3 = alloca %struct.Tree*, align 8
  %4 = alloca i8*, align 8
  store %struct.Tree* %0, %struct.Tree** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = getelementptr inbounds i8, i8* %5, i64 24
  %7 = getelementptr inbounds i8, i8* %6, i64 4
  %8 = load %struct.Tree*, %struct.Tree** %3, align 8
  %9 = getelementptr inbounds %struct.Tree, %struct.Tree* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i8, i8* %7, i64 %11
  %13 = getelementptr inbounds i8, i8* %12, i64 4
  ret i8* %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
